public/css/style.css
/* ... */
.ticker {
  animation: blink .9s infinite;
  animation-timing-function: steps(2, jump-start);
}

@keyframes blink {
  0% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

/* Contact container */
.c-contact {
  position: fixed;
  bottom: 0;
  width: fit-content;
  padding: 0 var(--gutter-width) var(--gutter-width);
  background-color: rgba(255, 255, 255, 0.001);
  mix-blend-mode: difference;
  z-index: 3;
}

.c-contact_container {
  display: flex;
  gap: var(--gutter-width);
}

.menu,
.send-message {
  border: none;
  text-align: left;
  padding: 12px 1rem;
  background-color: var(--fc-grey-300);
  color: var(--fc-white-100);
  backdrop-filter: blur(10px);
  text-decoration: none;
  cursor: pointer;
  text-wrap: nowrap;
  border-radius: 2px;
  transition: background-color 1s cubic-bezier(0.075, 0.82, 0.165, 1), color 1s cubic-bezier(0.075, 0.82, 0.165, 1), transform .2s ease-out;
}

.send-message {
  width: calc(2.125 * var(--column-width));
}

@media (min-width: 1024px) {

  .menu:hover,
  .send-message:hover,
  .menu:focus-visible,
  .send-message:focus-visible {
    background-color: var(--fc-white-100);
    color: black;
    outline: none;
  }
}

[data-hover-button].hover {
  background-color: var(--fc-white-100);
  color: black;
  outline: none;
}

.c-contact_container .menu {
  display: none;
}

/* Main section */
.c-main {
  width: 100vw;
  min-height: 100svh;
  background-color: var(--fc-black-100);
  padding-top: calc(280 / 16 * 1rem);
  position: relative;
  z-index: 2;
  overflow-y: clip;
}

.main-heading_wrapper {
  display: grid;
  grid-template-columns: repeat(12, minmax(0, 1fr));
  gap: var(--gutter-width);
  padding-inline: var(--gutter-width);
  padding-bottom: calc(74 / 16 * 1rem);
  background-color: var(--fc-black-100);
}

.c-main_container {
  position: relative;
}

/* Information Modal */
.c-main .modal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100svh;
  background-color: #020202;
  z-index: 10;
  padding: var(--gutter-width);
  transition: opacity .5 ease-out;
  opacity: 0;
  pointer-events: none
}

.modal.active {
  pointer-events: all;
}

.modal .modal-content {
  width: 100%;
  height: 100%;
  position: relative;
}

.modal-header {
  display: grid;
  grid-template-columns: repeat(12, minmax(0, 1fr));
  gap: var(--gutter-width);
  position: relative;
  z-index: 4;
}

.modal-header .modal-heading {
  grid-column: span 5 / span 5;
  line-height: 1.6;
}

.modal .modal-heading,
.modal .modal-heading span {
  font-size: clamp(0.875rem, 0.8421rem + 0.1754vw, 1rem);
  color: var(--fc-white-100);
  letter-spacing: 0.01em;
}

.modal-footer {
  position: absolute;
  width: 100%;
  bottom: 0;
  left: 0;
  right: 0;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  flex-wrap: wrap;
  gap: 1rem;
}

.modal-footer .send-message {
  background-color: var(--fc-grey-200);
  width: fit-content;
}

.modal-footer .info-send_message:hover {
  background-color: var(--fc-white-100);
}

.modal-footer .left-content {
  display: flex;
  gap: 2px;
  align-items: flex-end;
  flex-wrap: wrap;
}

.left-content .services {
  display: flex;
  flex-direction: column;
  gap: calc(28/16 * 1rem);
  width: calc(216 / 16 * 1rem);
}

.services .services-heading {
  width: 100%;
}

.services .services-heading,
.right-content p {
  cursor: auto;
  pointer-events: none;
}

.right-content p {
  width: fit-content;
}

.left-content .services .services-list_item {
  list-style: none;
  color: var(--fc-white-100);
}

.left-content .services .services-list {
  display: flex;
  flex-direction: column;
  gap: .5rem;
}

.modal-content .modal-body {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.modal-body img {
  position: absolute;
  top: 45%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 50%;
  height: 50%;
  object-fit: cover;
  z-index: -1;
  pointer-events: none;
}

/* Main content for the main section */
.main-heading {
  grid-column: 5 / 12;
  display: flex;
  flex-direction: column;
  gap: .35rem;
}

.c-main_container .projects {
  background-color: var(--fc-black-100);
}

.projects-item {
  height: 100vh;
  position: relative;
  width: 100%;
  padding-top: calc(36 / 16 * 1rem);
  overflow: clip;
}

.projects-item .projects-item_image {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.projects-item .projects-item_description {
  position: sticky;
  top: var(--gutter-width);
  padding-inline: var(--gutter-width);
  padding-bottom: var(--gutter-width);
  width: 100%;
  background-color: rgba(255, 255, 255, 0.001);
  mix-blend-mode: difference;
}

.projects-item .projects-item_description[data-first-description] {
  margin-top: 40vh;
}

.projects-item_description .sticky-wrapper {
  display: grid;
  grid-template-columns: repeat(12, minmax(0, 1fr));
  gap: var(--gutter-width);
}

.projects-item_description .description-number {
  height: fit-content;
}

.projects-item_description .description-title {
  grid-column: 9/11;
  text-wrap: nowrap;
}

.description-title .project-title {
  margin-bottom: .5rem;
  text-wrap: nowrap;
}

.description-title .project-attribution {
  margin-bottom: calc(36 / 16 * 1rem);
}

.projects-item:nth-child(5) .description-title .project-attribution,
.projects-item:nth-child(4) .description-title .project-attribution {
  margin-bottom: 0;
}

.description-title .project-link {
  text-decoration: none;
  position: relative;
}

.description-title .project-link.hidden {
  display: none;
}

.description-title .project-link[disabled] {
  opacity: 0.4;
  cursor: not-allowed;
}

.description-title .project-link[disabled]::before {
  display: none;
}

/* Slider */
.projects-item.slider .projects-item_description {
  position: sticky;
  top: var(--gutter-width);
}

.projects-item.slider .slider-row {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  display: flex;
}
/* ... */

